subindo atividade editada

--- a/filmes/src/components/lista/Lista.css
+++ b/filmes/src/components/lista/Lista.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    padding: 40px 0;
 }
 
 .listagem h1{
@@ -28,24 +30,72 @@
     height: 28px;
 }
 
-.tabela table{
+.tabela{
     width: 100%;
-   
+    margin-top: 30px;
 }
 
-.cabecalho :first-child{
+.tabela table{
+    width: 100%;
+
+    border-collapse: collapse;
+}
+
+.table_cabecalho :first-child{
     width: 300px;
 }
 
-.tabela .cabecalho :nth-child(2){
+.tabela .table_cabecalho :nth-child(2){
     width: 200px;
 }
 
-.tabela .cabecalho th{
+.tabela .table_cabecalho th{
     width: 100px;
 }
 
 .item_lista td{
     /* desgrudar o item do titulo */ 
-    padding: 20px 0 5px 0;
+    padding: 20px 0 10px 0;
 }
+
+.item_lista {
+    text-align: center;
+
+    border-bottom: solid 1px #73061c;
+}
+
+@media screen and (max-width: 768px) {
+
+    /* 1px - 768px */
+
+    /* um elemento abaixo do outro */ 
+
+.tabela thead{
+    display: none;
+}
+
+.item_lista td{
+    display: grid;
+    text-align: left;
+    padding: 10px;
+    grid-template-columns: 10ch auto;
+}
+
+.item_lista td::before{
+    /* Adiciona o data-cell no html e coloca os :: depois */
+    content: attr(data-cell) ":"; 
+    font-weight: 700;
+    width: 80px;
+    text-align: left;
+} 
+ .item_lista td:last-child{
+    margin-bottom: 24px;
+
+ }
+
+ .item_lista td:first-child{
+    margin-top: 24px;
+ }
+    
+}
+
