--- a/filmes/src/components/lista/Lista.css
+++ b/filmes/src/components/lista/Lista.css
@@ -1,9 +1,9 @@
 .listagem{
-    /* vamos retirar:
-    /* header: 75px 
+    /*Vamos retirar:
+    header: 75px
     cadastro: 252px
     footer: 40px */
-    min-height: calc(100vh - (75px + 252px + 40));
+    height: calc(100vh - (75px + 252px +  40px));
 
     display: flex;
     flex-direction: column;
@@ -23,7 +23,6 @@
     border-width: 1px;
     border-color: #73061B;
     margin-top: 5px;
-
 }
 
 .item_lista img{
@@ -39,10 +38,12 @@
     width: 100%;
 
     border-collapse: collapse;
+
 }
 
-.table_cabecalho :first-child{
+.tabela .table_cabecalho :first-child{
     width: 300px;
+
 }
 
 .tabela .table_cabecalho :nth-child(2){
@@ -54,22 +55,15 @@
 }
 
 .item_lista td{
-    /* desgrudar o item do titulo */ 
     padding: 20px 0 10px 0;
 }
 
-.item_lista {
+.item_lista{
     text-align: center;
-
-    border-bottom: solid 1px #73061c;
+    border-bottom: solid 1px #73061B30;
 }
 
-@media screen and (max-width: 768px) {
-
-    /* 1px - 768px */
-
-    /* um elemento abaixo do outro */ 
-
+@media screen and (max-width: 768px) {     
 .tabela thead{
     display: none;
 }
@@ -77,25 +71,18 @@
 .item_lista td{
     display: grid;
     text-align: left;
-    padding: 10px;
-    grid-template-columns: 10ch auto;
+    padding: 10px 10px 10px 0;
+    grid-template-columns: 10ch auto;;
 }
 
 .item_lista td::before{
-    /* Adiciona o data-cell no html e coloca os :: depois */
-    content: attr(data-cell) ":"; 
+    content: attr(data-cell)":";
     font-weight: 700;
     width: 80px;
     text-align: left;
-} 
- .item_lista td:last-child{
-    margin-bottom: 24px;
-
- }
-
- .item_lista td:first-child{
-    margin-top: 24px;
- }
-    
 }
 
+.item_lista td:last-child{
+    margin-bottom: 24px;
+}
+}
