--- a/filmes/src/components/botao/Botao.css
+++ b/filmes/src/components/botao/Botao.css
@@ -1,12 +1,17 @@
 .botao{
-    /* padding: 10px 100px; */
+    /* padding: 5px 100px; */
     width: 200px;
     height: 30px;
     border: none;
     cursor: pointer;
-    background-color: #73061B;
+    background-color: #73061b;
     color: white;
     border-radius: 6px;
-    /* Negrito */
     font-weight: bolder;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+.botao:hover {
+    background-color: #a3122d; 
+    /* background-size: cover; */
+    transform: scale(1.05); 
 }
