--- a/filmes/src/index.css
+++ b/filmes/src/index.css
@@ -1,16 +1,15 @@
-/* vamos colocar estilo padrão */ 
-/* reset css: */
+/*vamos colocar estilos padrão*/
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
-
+    box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
-}
 
-.layout_grid{
-    width: 100%;
-    height: 100%;
-    max-width: 80%;
-    margin: 0 auto;
-}
+}  
+    .layout_grid{
+        width: 100%;
+        height: 100%;
+        max-width: 80%;
+        margin: 0 auto;
+    }
